# ClassificationMatCPP

./: CMakeLists.txt
include/audiocensor/: audio_processor.h  config_manager.h  constants.h  license_manager.h  security.h  word_detector.h
include/ui/: license_dialog.h  main_window.h  obs_dialog.h
src/: main.cpp
src/core/: audio_processor.cpp  config_manager.cpp  license_manager.cpp  security.cpp  word_detector.cpp
src/ui/: license_dialog.cpp  main_window.cpp  obs_dialog.cpp
tools/: CMakeLists.txt  build.sh
